--- a/BootcampCoreServices/BootcampCoreServices.csproj
+++ b/BootcampCoreServices/BootcampCoreServices.csproj
@@ -59,6 +59,8 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="instrukcja.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
