--- a/BootcampCoreServices/BootcampCoreServices.csproj
+++ b/BootcampCoreServices/BootcampCoreServices.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModel\ReportsGenerator.cs" />
+    <Compile Include="ViewModel\TableParser.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
