AlphanumericComparer class added to deal with sorting alphanumeric fields (ClientId and Name). It required also minor changes in the implementation of some LINQ queries in the ReportsGenerator class.

--- a/BootcampCoreServices/BootcampCoreServices.csproj
+++ b/BootcampCoreServices/BootcampCoreServices.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Model\RequestDb.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModel\AlphanumericComparer.cs" />
     <Compile Include="ViewModel\ReportsGenerator.cs" />
     <Compile Include="ViewModel\TableParser.cs" />
   </ItemGroup>
